--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "gxs",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "",
-  "main": "TodoList.js",
+  "main": "./lib/index.js",
   "scripts": {
     "build": "./node_modules/.bin/babel src -d lib ",
     "prepublish": "npm run build",
-    "dev":"npm run build && ./node_modules/.bin/babel-node src/index"
+    "dev": "npm run build && ./node_modules/.bin/babel-node src/index"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/kelvv/gxs#readme",
   "dependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1"
+    "babel-preset-es2015": "^6.24.1",
+    "regexper.js": "^1.0.7"
   }
 }
